# blog

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  flake.nix  fly.toml  justfile  treefmt.toml
.github/workflows/: ci-nix.yml  ci.yml
posts/: .#ciao.org  ciao.org  ciao1.org  ciao2.org
src/: main.rs  posts.rs  routes.rs  templates.rs
static/: style.css
templates/: base.html  index.html
